# Crypto-Trader

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.java  ISSUE_TEMPLATE.md  LICENSE.md  PROFIT_MODEL.md  README.md  USER_STORY_ISSUE_TEMPLATE.md  angular.json  build.gradle.kts  docker-compose.yml  gradle.properties  package-lock.json  package.json  pom.xml  settings.gradle.kts  tsconfig.app.json  tsconfig.json  webpack.config.js
.aws/: buildspec-docs.yml  (+2 more)
Crypto-Trader-Analysis/: .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  currency_json_generator.py  main.py  manage.py  pyproject.toml  requirements.txt
Crypto-Trader-Analysis/api/: settings.py  urls.py
Crypto-Trader-Analysis/apps/models/: model_retriever.py  predictions.py  run_gpu_one.py  run_gpu_zero.py  train_model.py
Crypto-Trader-Analysis/apps/models/ai/: base_model.py  complex_lstm_model.py  complex_multi_layer_lstm_model.py  lstm_model.py  model_retriever.py  model_type.py  multi_layer_base_model.py  multi_layer_lstm_model.py
Crypto-Trader-Analysis/apps/models/data/: preprocessor.py
Crypto-Trader-Analysis/apps/models/database/: database.py  query_type.py
Crypto-Trader-Analysis/apps/models/prediction/: prediction.py  predictions.py
Crypto-Trader-Analysis/apps/models/training/: dataset_size.py  epoch_focus.py  multi_layer_training_model.py  multi_layer_training_model_builder.py  train_model.py  training_model.py  training_model_builder.py  training_session.py  training_type.py
Crypto-Trader-Analysis/apps/news/: fetch_articles.py
Crypto-Trader-Analysis/apps/news/analysis/: sentiment.py
Crypto-Trader-Analysis/apps/news/article/: article.py  scored_article.py
Crypto-Trader-Analysis/apps/news/models/: fetch_articles.py
Crypto-Trader-Analysis/apps/news/sources/: news_sources.py
Crypto-Trader-Analysis/config/: gpu_1_config.example.yml
Crypto-Trader-Analysis/gpu/: run_gpu_one.py  run_gpu_zero.py
Crypto-Trader-Analysis/src/: main.py
Crypto-Trader-Analysis/src/crypto_trader_analysis/: __init__.py
Crypto-Trader-Analysis/src/crypto_trader_analysis/api/: settings.py  urls.py
Crypto-Trader-Analysis/src/crypto_trader_analysis/core/: aws_secrets.py
Crypto-Trader-Analysis/src/database/: database.py  query.py
Crypto-Trader-Analysis/src/visual/: graph_type.py
(+2063 files in other folders)
